test/scripted/compilation2/errors/use_after_move.bnj
# test:common

struct Resource {
    func __deinit__(self) {}
}

# test:subtest
# test:error 14:13 "resource used after move"
# test:note 13:13 "previously moved here"

func main() {
    var a = Resource {};
    var b = a;
    var c = a;
}

# test:subtest
# test:error 26:13 "resource used after move"
# test:note 25:13 "previously moved here"

func consume(resource: Resource) {}

func main() {
    var a = Resource {};
    consume(a);
    var b = a;
}

# test:subtest
# test:error 41:13 "resource used after move"
# test:note 38:17 "previously moved in conditional branch here"

func main() {
    var a = Resource {};
    var flag = true;
    
    if flag {
        var b = a;
    }
    
    var c = a;
}

# test:subtest
# test:error 54:17 "resource used after move"
# test:note 53:17 "previously moved here"

func main() {
    var a = Resource {};
    var flag = true;
    
    if flag {
        var b = a;
        var c = a;
    }    
}

# test:subtest
# test:error 69:13 "resource used after move"
# test:note 68:13 "previously moved partially here"

func main() {
    var a = (
        Resource {},
        Resource {},
    );
    
    var b = a.0;
    var c = a;
}

# test:subtest
# test:error 89:13 "resource used after move"
# test:note 86:17 "previously moved partially in conditional branch here"

func main() {
    var a = (
        Resource {},
        Resource {},
    );
    
    var flag = true;
    
    if flag {
    } else {
        var b = a.0;
    }
    
    var c = a;
}

# test:subtest
# test:error 111:13 "resource used after move"
# test:note 110:13 "previously moved partially here"

struct Pair {
    var a: i32;
    var b: (Resource, Resource);
}

func main() {
    var a = Pair {
        a: 0,
        b: (
            Resource {},
            Resource {},
        ),
    };
    
    var b = a.b.0;
    var c = a;
}
